--- a/public/css/style.css
+++ b/public/css/style.css
@@ -658,7 +658,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #about {
-  background: url("../img/parede.jpg");
+  background: url("../img/corpo1.JPG");
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -715,7 +715,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: rgba(6, 12, 34, 0.6);
   position: absolute;
   left: 0;
-  bottom: -30px;
+  bottom: -21px;
   right: 0;
   text-align: center;
   padding-top: 10px;
