--- a/public/css/efeito.css
+++ b/public/css/efeito.css
@@ -9,7 +9,42 @@
     color: #6f6d6d;
     bottom: 23px;
     text-align: center;
-    opacity: 0.17;
+    opacity: 0.47;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .sombra {
+        position: absolute;
+        content: attr(data-titles);
+        font-size: 45px;
+        width: 100%;
+        text-transform: uppercase;
+        font-weight: 900;
+        letter-spacing: 5px;
+        color: #6f6d6d;
+        bottom: 40px;
+        text-align: center;
+        opacity: 0.47;
+    }
+
+    .whats {
+        margin: 0% 0% 14% 0% !important;
+        position: fixed;
+        background: #f82249;
+        display: none;
+        color: #fff;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border-radius: 50px;
+        right: 15px;
+        bottom: 15px;
+        transition: background 0.5s ease-in-out;
+    }
+
+    
+
 }
 
 .whats {
