--- a/public/css/style.css
+++ b/public/css/style.css
@@ -911,16 +911,16 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #venue .venue-info {
-  background: url("../img/imgteste.jpg") top center no-repeat;
-  background-size: cover;
+  /*background: url("../img/inscricao/033.jpg") top center no-repeat;
+*/  background-size: cover;
   position: relative;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 #venue .venue-info:before {
   content: "";
-  background: rgba(13, 20, 41, 0.8);
+  /*background: rgba(13, 20, 41, 0.8);*/
   position: absolute;
   bottom: 0;
   top: 0;
@@ -1302,6 +1302,22 @@ body.mobile-nav-active #mobile-nav-toggle {
   cursor: pointer;
 }
 
+.btnilustre{
+  color: #fff;
+  background: #22f850;
+  padding: 7px 7px;
+  border-radius: 4px;
+  border: 2px solid #22f850;
+  transition: all ease-in-out 0.3s;
+  font-weight: 500;
+  margin-left: 8px;
+  margin-top: 2px;
+  line-height: 1;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
@@ -1679,3 +1695,43 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-top: 10px;
   }
 }
+
+
+
+/*tudo sobre contagem*/
+
+
+
+.imginc{
+  width: 100%;
+  height: 100%;
+}
+#insc{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.wrapper { display: table; }
+
+.cell {
+  display: table-cell;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  vertical-align: middle;
+}
+
+#holder {
+  width: 100%;
+  height: auto;
+  margin: auto;
+}
+
+.cntSeparator { display: none; }
+
+.cntDigit {
+  margin-top: 20px !important;
+}
+
+  .cntDigit#cnt_0 { margin-left: 2px; }
+  .cntDigit#cnt_2 { margin-left: 7px; }
