Layout de todas as páginas do administrador realizada. Falta apenas backend para cadastrar, editar e deletar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1839,3 +1839,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .cntDigit#cnt_2 {
     margin-left: 7px;
 }
+
+#tabela tbody tr, #tabela thead tr {
+    text-align: center !important;
+}
