começando front da compra

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1005,6 +1005,24 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Hotels Section
 --------------------------------------------------------------*/
 
+
+.padv{
+    padding:60px !important;
+}
+
+@media only screen and (max-width:768px){
+    .padv{
+        padding:10px !important;
+    }
+
+}
+
+#kit{
+    padding: 5px;
+    background-color: #f5f5f5;;
+    border-radius: 5px;
+    margin-bottom: 10px; 
+}
 #hotels {
     padding: 60px 0;
 }
@@ -1792,13 +1810,17 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /*tudo sobre contagem*/
-
+.imgcomp {
+    width: 100%;
+    height: 100%;
+}
 
 
 .imginc {
     width: 100%;
     height: 100%;
 }
+
 
 #insc {
     padding-top: 30px;
