--- a/public/css/efeito.css
+++ b/public/css/efeito.css
@@ -100,6 +100,15 @@
 .input-group-text {
     height: 38px;
 }
+.adcKit{
+    border-radius: 30px;
+    cursor: pointer;
+    outline-color: transparent;
+}
+
+.modal-footer {
+    display: inherit !important;
+}
 
 .linkDiv {
     margin: 0% 0% 2% 0%;
