--- a/public/css/efeito.css
+++ b/public/css/efeito.css
@@ -47,6 +47,22 @@
 
 }
 
+@media only screen and (max-width: 414px) {
+    .sombra {
+        position: absolute;
+        content: attr(data-titles);
+        font-size: 40px;
+        width: 100%;
+        text-transform: uppercase;
+        font-weight: 900;
+        letter-spacing: 5px;
+        color: #6f6d6d;
+        bottom: 40px;
+        text-align: center;
+        opacity: 0.47;
+    }
+}
+
 .whats {
     margin: 0% 0% 4% 0%;
     position: fixed;
