--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
   License: https://bootstrapmade.com/license/
 */
 
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -33,8 +34,6 @@ p {
     margin: 0 0 30px 0;
 }
 
-
-
 h1,
 h2,
 h3,
@@ -52,7 +51,6 @@ input:focus {
     border-color: #f8234a !important;
     box-shadow: none !important;
 }
-
 
 #relatorioUser {
     table-layout: fixed !important;
@@ -92,6 +90,7 @@ button:focus {
     visibility: hidden;
 }
 
+
 /* Prelaoder */
 
 #preloader {
@@ -104,6 +103,7 @@ button:focus {
     overflow: visible;
     background: #fff url("../img/preloader.svg") no-repeat center center;
 }
+
 
 /* Back to top button */
 
@@ -136,6 +136,7 @@ button:focus {
     background: #e0072f;
     color: #fff;
 }
+
 
 /* Sections Header
 --------------------------------*/
@@ -177,6 +178,7 @@ button:focus {
 .section-with-bg {
     background-color: #f6f7fd;
 }
+
 
 /*--------------------------------------------------------------
 # Header
@@ -232,9 +234,11 @@ button:focus {
     max-height: 40px;
 }
 
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
+
 
 /* Nav Menu Essentials */
 
@@ -276,6 +280,7 @@ button:focus {
     min-width: 180px;
 }
 
+
 /* Nav Menu Arrows */
 
 .sf-arrows .sf-with-ul {
@@ -295,12 +300,14 @@ button:focus {
     content: "\f105";
 }
 
+
 /* Nav Meu Container */
 
 #nav-menu-container {
     float: right;
     margin: 0;
 }
+
 
 /* Nav Meu Styling */
 
@@ -399,6 +406,7 @@ button:focus {
     margin: 0;
 }
 
+
 /* Mobile Nav Toggle */
 
 #mobile-nav-toggle {
@@ -419,6 +427,7 @@ button:focus {
 #mobile-nav-toggle i {
     color: #fff;
 }
+
 
 /* Mobile Nav Styling */
 
@@ -493,6 +502,7 @@ button:focus {
     display: none;
 }
 
+
 /* Mobile Nav body classes */
 
 body.mobile-nav-active {
@@ -506,6 +516,7 @@ body.mobile-nav-active #mobile-nav {
 body.mobile-nav-active #mobile-nav-toggle {
     color: #fff;
 }
+
 
 /*--------------------------------------------------------------
 # Intro Section
@@ -673,7 +684,6 @@ body.mobile-nav-active #mobile-nav-toggle {
         transform: scale(0.6, 0.6);
         opacity: 1;
     }
-
     100% {
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
@@ -687,13 +697,13 @@ body.mobile-nav-active #mobile-nav-toggle {
         transform: scale(0.6, 0.6);
         opacity: 1;
     }
-
     100% {
         -webkit-transform: scale(1, 1);
         transform: scale(1, 1);
         opacity: 0;
     }
 }
+
 
 /*--------------------------------------------------------------
 # About Section
@@ -738,6 +748,17 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-bottom: 20px;
     color: #fff;
 }
+
+#portcont {
+    margin-top: 0px;
+}
+
+@media only screen and (max-width:414px) {
+    #portcont {
+        margin-top: 15px !important;
+    }
+}
+
 
 /*--------------------------------------------------------------
 # Speakers Section
@@ -835,6 +856,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 15px;
     margin-bottom: 10px;
 }
+
 
 /*--------------------------------------------------------------
 # Schedule Section
@@ -934,6 +956,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-bottom: 0;
 }
 
+
 /*--------------------------------------------------------------
 # Venue Section
 --------------------------------------------------------------*/
@@ -1001,28 +1024,29 @@ body.mobile-nav-active #mobile-nav-toggle {
     transform: scale(1.1);
 }
 
+
 /*--------------------------------------------------------------
 # Hotels Section
 --------------------------------------------------------------*/
 
-
-.padv{
-    padding:60px !important;
+.padv {
+    padding: 60px !important;
 }
 
-@media only screen and (max-width:768px){
-    .padv{
-        padding:10px !important;
+@media only screen and (max-width:768px) {
+    .padv {
+        padding: 10px !important;
     }
-
 }
 
-#kit{
+#kit {
     padding: 5px;
-    background-color: #f5f5f5;;
+    background-color: #f5f5f5;
+    ;
     border-radius: 5px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
+
 #hotels {
     padding: 60px 0;
 }
@@ -1079,6 +1103,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 15px;
 }
 
+
 /*--------------------------------------------------------------
 # Gallery Section
 --------------------------------------------------------------*/
@@ -1125,6 +1150,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     z-index: 1;
 }
 
+
 /*--------------------------------------------------------------
 # supporters Section
 --------------------------------------------------------------*/
@@ -1165,6 +1191,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #supporters img {
     transition: all 0.4s ease-in-out;
 }
+
 
 /*--------------------------------------------------------------
 # F.A.Q Section
@@ -1216,6 +1243,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #faq #faq-list a.collapsed i::before {
     content: "\f055" !important;
 }
+
 
 /*--------------------------------------------------------------
 # Subscribe Section
@@ -1270,6 +1298,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #subscribe button:hover {
     background: #e0072f;
 }
+
 
 /*--------------------------------------------------------------
 # Buy Tickets Section
@@ -1347,7 +1376,6 @@ body.mobile-nav-active #mobile-nav-toggle {
     background-color: #e0072f;
 }
 
-
 .btnmodal {
     color: #fff;
     background: #f82249;
@@ -1365,10 +1393,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .btnilustre {
     color: #fff;
-    background: #22f850;
+    background: #f24849;
     padding: 7px 7px;
     border-radius: 4px;
-    border: 2px solid #22f850;
+    border: 2px solid #f24849;
     transition: all ease-in-out 0.3s;
     font-weight: 500;
     margin-left: 8px;
@@ -1481,6 +1509,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #contact .form button[type="submit"]:hover {
     background: #e0072f;
 }
+
 
 /*--------------------------------------------------------------
 # Footer
@@ -1632,6 +1661,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: #ddd;
 }
 
+
 /*--------------------------------------------------------------
 # Responsive Media Queries
 --------------------------------------------------------------*/
@@ -1643,13 +1673,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (min-width: 768px) {
-
     #contact .contact-address,
     #contact .contact-phone,
     #contact .contact-email {
         padding: 20px 0;
     }
-
     #contact .contact-phone {
         border-left: 1px solid #ddd;
         border-right: 1px solid #ddd;
@@ -1666,11 +1694,9 @@ body.mobile-nav-active #mobile-nav-toggle {
     #intro {
         background-attachment: fixed;
     }
-
     #about {
         background-attachment: fixed;
     }
-
     #subscribe {
         background-attachment: fixed;
     }
@@ -1680,7 +1706,6 @@ body.mobile-nav-active #mobile-nav-toggle {
     #header .container {
         max-width: 100%;
     }
-
     .nav-menu a {
         padding: 8px 4px;
     }
@@ -1693,27 +1718,21 @@ body.mobile-nav-active #mobile-nav-toggle {
         padding: 15px 0;
         transition: all 0.5s;
     }
-
     #nav-menu-container {
         display: none;
     }
-
     #mobile-nav-toggle {
         display: inline;
     }
-
     #intro .intro-container {
         top: 70px;
     }
-
     #intro h1 {
         font-size: 34px;
     }
-
     #intro p {
         font-size: 16px;
     }
-
     #schedule .nav-tabs a {
         padding: 8px 60px;
     }
@@ -1723,11 +1742,9 @@ body.mobile-nav-active #mobile-nav-toggle {
     .back-to-top {
         bottom: 15px;
     }
-
     #faq #faq-list a {
         font-size: 18px;
     }
-
     #faq #faq-list i {
         top: 13px;
     }
@@ -1757,8 +1774,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     }
 }
 
-
-#ttl {
+.ttl {
     margin: 0 0 0px 0 !important;
 }
 
@@ -1779,14 +1795,27 @@ body.mobile-nav-active #mobile-nav-toggle {
     width: 10%;
 }
 
+
 /* para carrossel */
 
+@media only screen and (max-width: 1024px) {
+    .w-100 {
+        height: 40vh !important;
+    }
+    #intro {
+        width: 100%;
+        height: 40vh !important;
+        background: url(../img/parede.jpg) top center;
+        background-size: cover;
+        overflow: hidden;
+        position: relative;
+    }
+}
 
 @media only screen and (max-width: 768px) {
     .w-100 {
         height: 30vh !important;
     }
-
     #intro {
         width: 100%;
         height: 30vh !important;
@@ -1795,32 +1824,29 @@ body.mobile-nav-active #mobile-nav-toggle {
         overflow: hidden;
         position: relative;
     }
-
     .tabelaRelatorioA {
         width: 120px;
     }
-
     .tabelaRelatorioB {
         width: 80px;
     }
-
     .tabelaRelatorioC {
         width: 50px;
     }
 }
 
+
 /*tudo sobre contagem*/
+
 .imgcomp {
     width: 100%;
     height: 100%;
 }
 
-
 .imginc {
     width: 100%;
     height: 100%;
 }
-
 
 #insc {
     padding-top: 30px;
@@ -1845,7 +1871,6 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin: auto;
 }
 
-
 .cntSeparator {
     display: none;
 }
@@ -1862,11 +1887,14 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-left: 7px;
 }
 
-#tabela tbody tr, #tabela thead tr {
+#tabela tbody tr,
+#tabela thead tr {
     text-align: center !important;
 }
 
+
 /* Absolute Center Spinner */
+
 .loading {
     position: fixed;
     z-index: 999;
@@ -1880,7 +1908,9 @@ body.mobile-nav-active #mobile-nav-toggle {
     right: 0;
 }
 
+
 /* Transparent Overlay */
+
 .loading:before {
     content: '';
     display: block;
@@ -1889,10 +1919,12 @@ body.mobile-nav-active #mobile-nav-toggle {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
+
 /* :not(:required) hides these rules from IE9 and below */
+
 .loading:not(:required) {
     /* hide "loading..." text */
     font: 0/0 a;
@@ -1919,6 +1951,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
 }
 
+
 /* Animation */
 
 @-webkit-keyframes spinner {
@@ -1937,6 +1970,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         transform: rotate(360deg);
     }
 }
+
 @-moz-keyframes spinner {
     0% {
         -webkit-transform: rotate(0deg);
@@ -1953,6 +1987,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         transform: rotate(360deg);
     }
 }
+
 @-o-keyframes spinner {
     0% {
         -webkit-transform: rotate(0deg);
@@ -1969,6 +2004,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         transform: rotate(360deg);
     }
 }
+
 @keyframes spinner {
     0% {
         -webkit-transform: rotate(0deg);
