--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1778,7 +1778,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin: 0 0 0px 0 !important;
 }
 
-.tabelaRelatorio {
+.scroll {
     max-width: 100%;
     overflow: auto;
 }
