ajustando imagens da pg de compra

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1042,7 +1042,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #kit {
     padding: 5px;
-    background-color: #f5f5f5;
+    background-color: white;
     ;
     border-radius: 5px;
     margin-bottom: 10px;
