Troca de tabela por cards de algumas views que mostram imagens na tabela. Front de Recuperação de senha realizado.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
 a {
     color: #f82249;
     transition: 0.5s;
+    cursor: pointer;
 }
 
 a:hover,
@@ -2028,4 +2029,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .nav-menu-active {
     color: #f82249 !important;
+}
+
+.col-md-3{
+    max-width: 20% !important;
 }
