--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2031,6 +2031,13 @@ body.mobile-nav-active #mobile-nav-toggle {
     color: #f82249 !important;
 }
 
-.col-md-3{
+.col-lg-3#colanuncio{
     max-width: 20% !important;
+}
+@media only screen and (max-width:767px){
+
+    .col-lg-3#colanuncio{
+        max-width: 100% !important;
+    }
+
 }
