--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2034,6 +2034,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 .col-lg-3#colanuncio{
     max-width: 20% !important;
 }
+.card-img-top#cardSlideshow{
+    height: 230px;
+}
+.card-img-top#cardAnuncio{
+    height: 160px;
+}
 @media only screen and (max-width:767px){
 
     .col-lg-3#colanuncio{
