--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2047,10 +2047,23 @@ body.mobile-nav-active #mobile-nav-toggle {
     }
 
 }
+
+.fc-content .fc-title{
+    color: black !important;
+    font-weight: bold;
+}
 .fc-time-grid-event{
     cursor: pointer !important;
 }
 .fc-view-container .fc-content .fc-time, .fc-view-container .fc-content .fc-time:after, .fc-view-container .fc-content .fc-time:before{
     color:white !important;
     font-weight: bold !important;
+}
+#imageAgendaEdit{
+    background: #fff;
+    z-index: 1;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 20px;
+    display: none;
 }
