--- a/public/css/style.css
+++ b/public/css/style.css
@@ -846,7 +846,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #schedule .nav-tabs li {
     display: inline-block;
-    margin-bottom: 0;
+    margin-bottom: 4px;
 }
 
 #schedule .nav-tabs a {
@@ -1750,6 +1750,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* para carrossel */
+.w-100 {
+        height: 100vh !important;
+    }
 
 @media only screen and (max-width: 1024px) {
     .w-100 {
@@ -1792,6 +1795,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .imgcomp {
     width: 100%;
+    cursor: pointer;
 }
 
 .imginc {
@@ -2023,13 +2027,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #tabelaC {
-    width: 100%;
-    background:#fdf5f5;
-    color:#000;
-    text-transform: uppercase;
+    width: 100%; 
 }
 
 #tabelaC thead{
-    border-top: 1px solid #0e1b4d;
-    border-bottom: 1px solid #0e1b4d;
+    border-top: 1px solid #169e03;
+    border-bottom: 1px solid #169e03;
+    text-transform: uppercase;
 }
