--- a/public/css/efeito.css
+++ b/public/css/efeito.css
@@ -163,6 +163,26 @@
     color: #e0072f !important;
 }
 
+#schedule .nav-tabs {
+    max-width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+#schedule .nav-tabs::-webkit-scrollbar {
+    width: 12px;
+}
+
+#schedule .nav-tabs::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+#schedule .nav-tabs::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
 
 /* Responsividade de evento */
 
@@ -170,21 +190,35 @@
     .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
         width: 89% !important;
     }
+
     .input-group-prepend {
         margin-right: -1px;
         margin-bottom: 10px;
     }
-    .link{
+
+    .link {
         margin: 0% 0% 0% 17% !important;
     }
-    .nomeLink{
+
+    .nomeLink {
         width: 78% !important;
         height: 38px;
     }
-    .link{
+
+    .link {
         height: 38px;
     }
-    .linkSpan{
+
+    .linkSpan {
         margin-right: -55px;
+    }
+    .cntDigit {
+        margin: 0% 0% 0% 1%;
+    }
+    .cntDigit#cnt_2 {
+        margin-left: 2px;
+    }
+    .digits{
+        margin: 0% 0% 0% 18% !important;
     }
 }
