--- a/public/css/style.css
+++ b/public/css/style.css
@@ -834,6 +834,9 @@ body.mobile-nav-active #mobile-nav-toggle {
     display: block;
     border-bottom: 0;
     margin-bottom: 30px;
+    max-width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 #schedule .nav-tabs li {
@@ -1742,9 +1745,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 /* para carrossel */
-.w-100 {
+#imgcarrousel {
         height: 100vh !important;
     }
+#imgAnu{
+    height: 60vh !important;
+}
+
 
 @media only screen and (max-width: 1024px) {
     .w-100 {
