--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1360,6 +1360,23 @@ body.mobile-nav-active #mobile-nav-toggle {
     cursor: pointer;
 }
 
+.btnilustre2 {
+    color: #fff;
+    background: #0e1b4d;
+    padding: 7px 7px;
+    border-radius: 4px;
+    border: 2px solid #0e1b4d;
+    transition: all ease-in-out 0.3s;
+    font-weight: 500;
+    margin-left: 0px;
+    margin-top: 2px;
+    line-height: 1;
+    font-size: 13px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
