--- a/public/css/efeito.css
+++ b/public/css/efeito.css
@@ -164,17 +164,17 @@
 }
 
 #schedule .nav-tabs::-webkit-scrollbar {
-    width: 12px;
+    height: 6px !important;
 }
 
 #schedule .nav-tabs::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+    background: #ccc;
+    border-radius: 5px;
 }
 
 #schedule .nav-tabs::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    background: rgb(114, 113, 113);
 }
 
 
