--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1373,7 +1373,6 @@ body.mobile-nav-active #mobile-nav-toggle {
     line-height: 1;
     font-size: 13px;
     cursor: pointer;
-    margin-bottom: 10px;
     margin-right: 10px;
 }
 
@@ -1518,7 +1517,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .btn-link {
-    color: #2f6880 !important;
+    color: #015174 !important;
+    cursor: pointer;
+}
+
+.btn-link:hover{
+    color: #072431 !important;
     cursor: pointer;
 }
 
@@ -1767,7 +1771,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #imgAnu {
-    height: 40vh !important;
+    height: 50vh !important;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -2060,4 +2064,8 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 70px;
     margin-top: 20px;
     text-shadow: 0.1em 0.1em 0.2em black;
+}
+
+#Sp{
+    margin-bottom: 30px;
 }
