--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,27 +1,36 @@
-body{
+body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-img{
+img {
     width: 200px;
     margin-bottom: -30px;
 }
 
-#header{
-    padding:10px;
+#header {
+    padding: 10px;
     margin-bottom: -50px;
 }
 
-#lista{
+#lista {
     margin-bottom: 20px;
-    
+
 
 }
-#lista .item{
-    padding:2px;
+
+#lista .item {
+    padding: 2px;
     margin-top: 10px;
     background: #ccc;
     border-radius: 2px;
     padding-left: 15px;
-    
+
+}
+
+tbody tr:nth-child(odd) {
+    background: #CCC
+}
+
+li:nth-child(5n+3) {
+    font-weight: bold
 }
